--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,3 +11,9 @@ repos:
   - id: check-toml
   - id: check-json
   - id: detect-private-key
+- repo: https://github.com/python-poetry/poetry
+  rev: 1.7.0
+  hooks:
+  - id: poetry-check
+  - id: poetry-lock
+  - id: poetry-export
